BookCard button overlap issues fixed, Missing cover fix, History function

--- a/client/src/components/Books/BookCard.module.css
+++ b/client/src/components/Books/BookCard.module.css
@@ -99,8 +99,5 @@
 }
 
 .bookmark-message {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
   font-weight: bold;
 }
